[package]
name = "warbots"
version = "0.1.0"
authors = ["lmeadows <meadows.lucas@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.35"
rand = { version = "0.7", features = ["wasm-bindgen"] }
lazy_static = "1.4.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioBuffer',
  'AudioContext',
  'AudioNode',
  'AudioBufferSourceNode',
  'AudioDestinationNode',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'console',
  'Document',
  'Element',
  'EventTarget',
  'KeyboardEvent',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
